добавил ручку обновление товара, сваггер
